@@ -1,5 +1,7 @@
 2011-03-18  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* intervals.h (CHECK_TOTAL_LENGTH): Avoid empty "else".
+
 	* atimer.c (start_atimer, append_atimer_lists, set_alarm): Rename
 	locals to avoid shadowing.
 
